[package]
name = "huntback"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "wrap_help", "cargo"] }
clap-stdin = "0.4.0"
reqwest = "0.12.3"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
